--- a/BlogManagement.Api/Properties/launchSettings.json
+++ b/BlogManagement.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "BlogManagement.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
